@@ -1,6 +1,7 @@
 package galyleo.shell.magic;
 
 import ball.annotation.ServiceProviderFor;
+import galyleo.shell.Shell;
 import java.io.InputStream;
 import java.io.PrintStream;
 import java.util.Map;
@@ -24,10 +25,11 @@ import static jdk.jshell.Snippet.Status.REJECTED;
 @NoArgsConstructor @ToString @Log4j2
 public class Java implements AnnotatedMagic {
     @Override
-    public void execute(JShell jshell,
+    public void execute(Shell shell,
                         InputStream in, PrintStream out, PrintStream err,
                         String magic, String code) throws Exception {
         try {
+            var jshell = shell.jshell();
             var iterator = parse(jshell, code).entrySet().iterator();
 
             while (iterator.hasNext()) {
