@@ -1,9 +1,12 @@
+2021-02-02  Allen D. Ball  <ball@hcf.dev>
+
+	* Re-factored Magic interfaces to accept Shell instead of JShell.
+
 2021-02-01  Allen D. Ball  <ball@hcf.dev>
 
 	* Added Java Magic and re-factored Shell and Magic accordingly.
 
 	* src/main/java/galyleo/shell/Shell.java:
-	Moved implementation from Java (and removed Java).
 	Added addJarsToClasspath(String...) and addToClasspath(String...)
 	methods.
 
